# IDM_40-protons

./: README.md
around/: CMakeLists.txt  example2.cpp  new 2.cc
around/include/: ExG4ActionInitialization01.hh  ExG4DetectorConstruction01.hh  ExG4DetectorHit.hh  ExG4DetectorSD.hh  ExG4PrimaryGeneratorAction02.hh  new 2.txt  randgen.hh
around/src/: ExG4ActionInitialization01.cpp  ExG4DetectorConstruction01.cpp  ExG4DetectorHit.cpp  ExG4DetectorSD.cpp  ExG4PrimaryGeneratorAction02.cpp
